data/wordpress/ingress_wordpress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: wordpress-ingress
  namespace: wordpress
  annotations:
    kubernetes.io/ingress.class: nginx
    kubernetes.io/tls-acme: "true"
spec:
  tls:
    - hosts:
        - wordpress.example.com
      secretName: wordpress-tls
  rules:
    - host: wordpress.example.com
      http:
        paths:
          - path: /
            backend:
              serviceName: wordpress
              servicePort: 80
